internal/synlong/gen/synlong_parser.go
// Code generated from /Users/wei/GoProjects/go-zero-check/internal/synlong/Synlong.g4 by ANTLR 4.13.1. DO NOT EDIT.

package parser // Synlong

import (
	"fmt"
	"strconv"
  	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}


type SynlongParser struct {
	*antlr.BaseParser
}

var SynlongParserStaticData struct {
  once                   sync.Once
  serializedATN          []int32
  LiteralNames           []string
  SymbolicNames          []string
  RuleNames              []string
  PredictionContextCache *antlr.PredictionContextCache
  atn                    *antlr.ATN
  decisionToDFA          []*antlr.DFA
}

func synlongParserInit() {
  staticData := &SynlongParserStaticData
  staticData.LiteralNames = []string{
    "", "'type'", "';'", "'='", "'enum'", "'{'", "'}'", "'bool'", "'char'", 
    "'byte'", "'ubyte'", "'short'", "'ushort'", "'int'", "'uint'", "'long'", 
    "'ulong'", "'float'", "'real'", "','", "'^'", "':'", "'const'", "'['", 
    "']'", "'function'", "'node'", "'('", "')'", "'returns'", "'let'", "'tel'", 
    "'var'", "'when'", "'not'", "'last'", "'automaton'", "'initial'", "'final'", 
    "'state'", "'unless'", "'until'", "'if'", "'resume'", "'restart'", "'''", 
    "'.'", "'pre'", "'->'", "'fby'", "'merge'", "'#'", "'..'", "'default'", 
    "'with'", "'then'", "'else'", "'case'", "'of'", "'|'", "'-'", "'true'", 
    "'false'", "'_'", "'<<'", "'>>'", "'mapw'", "'mapwi'", "'foldw'", "'foldwi'", 
    "'(make'", "'(flatten'", "'+$'", "'-$'", "'not$'", "'short$'", "'int$'", 
    "'float$'", "'real$'", "'$+$'", "'$-$'", "'$*$'", "'$/$'", "'$mod$'", 
    "'$div$'", "'$=$'", "'$<>$'", "'$<$'", "'$>$'", "'$<=$'", "'$>=$'", 
    "'$and$'", "'$or$'", "'$xor$'", "'map'", "'fold'", "'mapi'", "'foldi'", 
    "'mapfold'", "'+'", "'*'", "'/'", "'mod'", "'div'", "'<>'", "'<'", "'>'", 
    "'<='", "'>='", "'and'", "'or'", "'xor'",
  }
  staticData.SymbolicNames = []string{
    "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
    "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
    "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
    "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
    "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
    "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
    "", "", "", "", "", "", "", "", "", "", "COMMENT", "ID", "CHAR", "INTEGER", 
    "UINT", "FLOAT", "REAL", "USHORT", "SHORT", "WS",
  }
  staticData.RuleNames = []string{
    "program", "decls", "type_block", "type_decl", "type_def", "type_expr", 
    "field_decl", "typevar", "const_block", "const_decl", "const_expr", 
    "const_list", "const_label_expr", "user_op_decl", "op_kind", "params", 
    "returns_clause", "op_body", "local_block", "var_decls", "var_id", "when_decl", 
    "clock_expr", "last_decl", "equation", "lhs", "lhs_id", "return_statement", 
    "returns_var", "state_machine", "state_decl", "data_def", "transition", 
    "expr", "simple_expr", "tempo_expr", "bool_expr", "array_expr", "struct_expr", 
    "label_expr", "mixed_constructor", "label_or_index", "index", "switch_expr", 
    "case_expr", "pattern", "apply_expr", "prefix_operator", "prefix_unary_operator", 
    "prefix_binary_operator", "iterator", "list", "unary_arith_op", "bin_arith_op", 
    "bin_relation_op", "bin_bool_op", "atom",
  }
  staticData.PredictionContextCache = antlr.NewPredictionContextCache()
  deserializer := antlr.NewATNDeserializer(nil)
  staticData.atn = deserializer.Deserialize(staticData.serializedATN)
  atn := staticData.atn
  staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
  decisionToDFA := staticData.decisionToDFA
  for index, state := range atn.DecisionToState {
    decisionToDFA[index] = antlr.NewDFA(state, index)
  }
}

// SynlongParserInit initializes any static state used to implement SynlongParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewSynlongParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func SynlongParserInit() {
  staticData := &SynlongParserStaticData
  staticData.once.Do(synlongParserInit)
}

// NewSynlongParser produces a new parser instance for the optional input antlr.TokenStream.
func NewSynlongParser(input antlr.TokenStream) *SynlongParser {
	SynlongParserInit()
	this := new(SynlongParser)
	this.BaseParser = antlr.NewBaseParser(input)
  staticData := &SynlongParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "Synlong.g4"

	return this
}


// SynlongParser tokens.
const (
	SynlongParserEOF = antlr.TokenEOF
	SynlongParserT__0 = 1
	SynlongParserT__1 = 2
	SynlongParserT__2 = 3
	SynlongParserT__3 = 4
	SynlongParserT__4 = 5
	SynlongParserT__5 = 6
	SynlongParserT__6 = 7
	SynlongParserT__7 = 8
	SynlongParserT__8 = 9
	SynlongParserT__9 = 10
	SynlongParserT__10 = 11
	SynlongParserT__11 = 12
	SynlongParserT__12 = 13
	SynlongParserT__13 = 14
	SynlongParserT__14 = 15
	SynlongParserT__15 = 16
	SynlongParserT__16 = 17
	SynlongParserT__17 = 18
	SynlongParserT__18 = 19
	SynlongParserT__19 = 20
	SynlongParserT__20 = 21
	SynlongParserT__21 = 22
	SynlongParserT__22 = 23
	SynlongParserT__23 = 24
	SynlongParserT__24 = 25
	SynlongParserT__25 = 26
	SynlongParserT__26 = 27
	SynlongParserT__27 = 28
	SynlongParserT__28 = 29
	SynlongParserT__29 = 30
	SynlongParserT__30 = 31
	SynlongParserT__31 = 32
	SynlongParserT__32 = 33
	SynlongParserT__33 = 34
	SynlongParserT__34 = 35
	SynlongParserT__35 = 36
	SynlongParserT__36 = 37
	SynlongParserT__37 = 38
	SynlongParserT__38 = 39
	SynlongParserT__39 = 40
	SynlongParserT__40 = 41
	SynlongParserT__41 = 42
	SynlongParserT__42 = 43
	SynlongParserT__43 = 44
	SynlongParserT__44 = 45
	SynlongParserT__45 = 46
	SynlongParserT__46 = 47
	SynlongParserT__47 = 48
	SynlongParserT__48 = 49
	SynlongParserT__49 = 50
	SynlongParserT__50 = 51
	SynlongParserT__51 = 52
	SynlongParserT__52 = 53
	SynlongParserT__53 = 54
	SynlongParserT__54 = 55
	SynlongParserT__55 = 56
	SynlongParserT__56 = 57
	SynlongParserT__57 = 58
	SynlongParserT__58 = 59
	SynlongParserT__59 = 60
	SynlongParserT__60 = 61
	SynlongParserT__61 = 62
	SynlongParserT__62 = 63
	SynlongParserT__63 = 64
	SynlongParserT__64 = 65
	SynlongParserT__65 = 66
	SynlongParserT__66 = 67
	SynlongParserT__67 = 68
	SynlongParserT__68 = 69
	SynlongParserT__69 = 70
	SynlongParserT__70 = 71
	SynlongParserT__71 = 72
	SynlongParserT__72 = 73
	SynlongParserT__73 = 74
	SynlongParserT__74 = 75
	SynlongParserT__75 = 76
	SynlongParserT__76 = 77
	SynlongParserT__77 = 78
	SynlongParserT__78 = 79
	SynlongParserT__79 = 80
	SynlongParserT__80 = 81
	SynlongParserT__81 = 82
	SynlongParserT__82 = 83
	SynlongParserT__83 = 84
	SynlongParserT__84 = 85
	SynlongParserT__85 = 86
	SynlongParserT__86 = 87
	SynlongParserT__87 = 88
	SynlongParserT__88 = 89
	SynlongParserT__89 = 90
	SynlongParserT__90 = 91
	SynlongParserT__91 = 92
	SynlongParserT__92 = 93
	SynlongParserT__93 = 94
	SynlongParserT__94 = 95
	SynlongParserT__95 = 96
	SynlongParserT__96 = 97
	SynlongParserT__97 = 98
	SynlongParserT__98 = 99
	SynlongParserT__99 = 100
	SynlongParserT__100 = 101
	SynlongParserT__101 = 102
	SynlongParserT__102 = 103
	SynlongParserT__103 = 104
	SynlongParserT__104 = 105
	SynlongParserT__105 = 106
	SynlongParserT__106 = 107
	SynlongParserT__107 = 108
	SynlongParserT__108 = 109
	SynlongParserT__109 = 110
	SynlongParserT__110 = 111
	SynlongParserCOMMENT = 112
	SynlongParserID = 113
	SynlongParserCHAR = 114
	SynlongParserINTEGER = 115
	SynlongParserUINT = 116
	SynlongParserFLOAT = 117
	SynlongParserREAL = 118
	SynlongParserUSHORT = 119
	SynlongParserSHORT = 120
	SynlongParserWS = 121
)

// SynlongParser rules.
const (
	SynlongParserRULE_program = 0
	SynlongParserRULE_decls = 1
	SynlongParserRULE_type_block = 2
	SynlongParserRULE_type_decl = 3
	SynlongParserRULE_type_def = 4
	SynlongParserRULE_type_expr = 5
	SynlongParserRULE_field_decl = 6
	SynlongParserRULE_typevar = 7
	SynlongParserRULE_const_block = 8
	SynlongParserRULE_const_decl = 9
	SynlongParserRULE_const_expr = 10
	SynlongParserRULE_const_list = 11
	SynlongParserRULE_const_label_expr = 12
	SynlongParserRULE_user_op_decl = 13
	SynlongParserRULE_op_kind = 14
	SynlongParserRULE_params = 15
	SynlongParserRULE_returns_clause = 16
	SynlongParserRULE_op_body = 17
	SynlongParserRULE_local_block = 18
	SynlongParserRULE_var_decls = 19
	SynlongParserRULE_var_id = 20
	SynlongParserRULE_when_decl = 21
	SynlongParserRULE_clock_expr = 22
	SynlongParserRULE_last_decl = 23
	SynlongParserRULE_equation = 24
	SynlongParserRULE_lhs = 25
	SynlongParserRULE_lhs_id = 26
	SynlongParserRULE_return_statement = 27
	SynlongParserRULE_returns_var = 28
	SynlongParserRULE_state_machine = 29
	SynlongParserRULE_state_decl = 30
	SynlongParserRULE_data_def = 31
	SynlongParserRULE_transition = 32
	SynlongParserRULE_expr = 33
	SynlongParserRULE_simple_expr = 34
	SynlongParserRULE_tempo_expr = 35
	SynlongParserRULE_bool_expr = 36
	SynlongParserRULE_array_expr = 37
	SynlongParserRULE_struct_expr = 38
	SynlongParserRULE_label_expr = 39
	SynlongParserRULE_mixed_constructor = 40
	SynlongParserRULE_label_or_index = 41
	SynlongParserRULE_index = 42
	SynlongParserRULE_switch_expr = 43
	SynlongParserRULE_case_expr = 44
	SynlongParserRULE_pattern = 45
	SynlongParserRULE_apply_expr = 46
	SynlongParserRULE_prefix_operator = 47
	SynlongParserRULE_prefix_unary_operator = 48
	SynlongParserRULE_prefix_binary_operator = 49
	SynlongParserRULE_iterator = 50
	SynlongParserRULE_list = 51
	SynlongParserRULE_unary_arith_op = 52
	SynlongParserRULE_bin_arith_op = 53
	SynlongParserRULE_bin_relation_op = 54
	SynlongParserRULE_bin_bool_op = 55
	SynlongParserRULE_atom = 56
)

// IProgramContext is an interface to support dynamic dispatch.
type IProgramContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllDecls() []IDeclsContext
	Decls(i int) IDeclsContext

	// IsProgramContext differentiates from other interfaces.
	IsProgramContext()
}

type ProgramContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyProgramContext() *ProgramContext {
	var p = new(ProgramContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SynlongParserRULE_program
	return p
}

func InitEmptyProgramContext(p *ProgramContext)  {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SynlongParserRULE_program
}

func (*ProgramContext) IsProgramContext() {}

func NewProgramContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ProgramContext {
	var p = new(ProgramContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = SynlongParserRULE_program

	return p
}

func (s *ProgramContext) GetParser() antlr.Parser { return s.parser }

func (s *ProgramContext) AllDecls() []IDeclsContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IDeclsContext); ok {
			len++
		}
	}

	tst := make([]IDeclsContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IDeclsContext); ok {
			tst[i] = t.(IDeclsContext)
			i++
		}
	}

	return tst
}

func (s *ProgramContext) Decls(i int) IDeclsContext {
	var t antlr.RuleContext;
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDeclsContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext);
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDeclsContext)
}

func (s *ProgramContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ProgramContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}


func (s *ProgramContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SynlongListener); ok {
		listenerT.EnterProgram(s)
	}
}

func (s *ProgramContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SynlongListener); ok {
		listenerT.ExitProgram(s)
	}
}

func (s *ProgramContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case SynlongVisitor:
		return t.VisitProgram(s)

	default:
		return t.VisitChildren(s)
	}
}




func (p *SynlongParser) Program() (localctx IProgramContext) {
	localctx = NewProgramContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, SynlongParserRULE_program)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(117)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)


	for ((int64(_la) & ^0x3f) == 0 && ((int64(1) << _la) & 104857602) != 0) {
		{
			p.SetState(114)
			p.Decls()
		}


		p.SetState(119)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
	    	goto errorExit
	    }
		_la = p.GetTokenStream().LA(1)
	}



errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}


// IDeclsContext is an interface to support dynamic dispatch.
type IDeclsContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Type_block() IType_blockContext
	Const_block() IConst_blockContext
	User_op_decl() IUser_op_declContext

	// IsDeclsContext differentiates from other interfaces.
	IsDeclsContext()
}

type DeclsContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyDeclsContext() *DeclsContext {
	var p = new(DeclsContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SynlongParserRULE_decls
	return p
}

func InitEmptyDeclsContext(p *DeclsContext)  {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SynlongParserRULE_decls
}

func (*DeclsContext) IsDeclsContext() {}

func NewDeclsContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *DeclsContext {
	var p = new(DeclsContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = SynlongParserRULE_decls

	return p
}

func (s *DeclsContext) GetParser() antlr.Parser { return s.parser }

func (s *DeclsContext) Type_block() IType_blockContext {
	var t antlr.RuleContext;
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IType_blockContext); ok {
			t = ctx.(antlr.RuleContext);
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IType_blockContext)
}

func (s *DeclsContext) Const_block() IConst_blockContext {
	var t antlr.RuleContext;
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IConst_blockContext); ok {
			t = ctx.(antlr.RuleContext);
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IConst_blockContext)
}

func (s *DeclsContext) User_op_decl() IUser_op_declContext {
	var t antlr.RuleContext;
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IUser_op_declContext); ok {
			t = ctx.(antlr.RuleContext);
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IUser_op_declContext)
}

func (s *DeclsContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DeclsContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}


func (s *DeclsContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SynlongListener); ok {
		listenerT.EnterDecls(s)
	}
}

func (s *DeclsContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SynlongListener); ok {
		listenerT.ExitDecls(s)
	}
}

func (s *DeclsContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case SynlongVisitor:
		return t.VisitDecls(s)

	default:
		return t.VisitChildren(s)
	}
}




func (p *SynlongParser) Decls() (localctx IDeclsContext) {
	localctx = NewDeclsContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, SynlongParserRULE_decls)
	p.SetState(123)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetTokenStream().LA(1) {
	case SynlongParserT__0:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(120)
			p.Type_block()
		}


	case SynlongParserT__21:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(121)
			p.Const_block()
		}


	case SynlongParserT__24, SynlongParserT__25:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(122)
			p.User_op_decl()
		}



	default:
		p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		goto errorExit
	}


errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}


// IType_blockContext is an interface to support dynamic dispatch.
type IType_blockContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllType_decl() []IType_declContext
	Type_decl(i int) IType_declContext

	// IsType_blockContext differentiates from other interfaces.
	IsType_blockContext()
}

type Type_blockContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyType_blockContext() *Type_blockContext {
	var p = new(Type_blockContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SynlongParserRULE_type_block
	return p
}

func InitEmptyType_blockContext(p *Type_blockContext)  {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SynlongParserRULE_type_block
}

func (*Type_blockContext) IsType_blockContext() {}

func NewType_blockContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Type_blockContext {
	var p = new(Type_blockContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = SynlongParserRULE_type_block

	return p
}

func (s *Type_blockContext) GetParser() antlr.Parser { return s.parser }

func (s *Type_blockContext) AllType_decl() []IType_declContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IType_declContext); ok {
			len++
		}
	}

	tst := make([]IType_declContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IType_declContext); ok {
			tst[i] = t.(IType_declContext)
			i++
		}
	}

	return tst
}

func (s *Type_blockContext) Type_decl(i int) IType_declContext {
	var t antlr.RuleContext;
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IType_declContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext);
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IType_declContext)
}

func (s *Type_blockContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Type_blockContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}


func (s *Type_blockContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SynlongListener); ok {
		listenerT.EnterType_block(s)
	}
}

func (s *Type_blockContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SynlongListener); ok {
		listenerT.ExitType_block(s)
	}
}

func (s *Type_blockContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case SynlongVisitor:
		return t.VisitType_block(s)

	default:
		return t.VisitChildren(s)
	}
}




func (p *SynlongParser) Type_block() (localctx IType_blockContext) {
	localctx = NewType_blockContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, SynlongParserRULE_type_block)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(125)
		p.Match(SynlongParserT__0)
		if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
		}
	}
	p.SetState(131)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)


	for _la == SynlongParserID {
		{
			p.SetState(126)
			p.Type_decl()
		}
		{
			p.SetState(127)
			p.Match(SynlongParserT__1)
			if p.HasError() {
					// Recognition error - abort rule
					goto errorExit
			}
		}


		p.SetState(133)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
	    	goto errorExit
	    }
		_la = p.GetTokenStream().LA(1)
	}



errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}


// IType_declContext is an interface to support dynamic dispatch.
type IType_declContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	ID() antlr.TerminalNode
	Type_def() IType_defContext

	// IsType_declContext differentiates from other interfaces.
	IsType_declContext()
}

type Type_declContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyType_declContext() *Type_declContext {
	var p = new(Type_declContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SynlongParserRULE_type_decl
	return p
}

func InitEmptyType_declContext(p *Type_declContext)  {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SynlongParserRULE_type_decl
}

func (*Type_declContext) IsType_declContext() {}

func NewType_declContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Type_declContext {
	var p = new(Type_declContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = SynlongParserRULE_type_decl

	return p
}

func (s *Type_declContext) GetParser() antlr.Parser { return s.parser }

func (s *Type_declContext) ID() antlr.TerminalNode {
	return s.GetToken(SynlongParserID, 0)
}

func (s *Type_declContext) Type_def() IType_defContext {
	var t antlr.RuleContext;
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IType_defContext); ok {
			t = ctx.(antlr.RuleContext);
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IType_defContext)
}

func (s *Type_declContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Type_declContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}


func (s *Type_declContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SynlongListener); ok {
		listenerT.EnterType_decl(s)
	}
}
